# tfe-codspeed-demo

./: .gitignore  Dockerfile.bench  README.md  pyproject.toml
.github/workflows/: codspeed.yml
demo/: apply_regression.py
src/tfe_bench/: duration.py  interval.py
tests/: test_bench_duration.py  test_bench_interval.py
