[project]
name = "tfe-bench"
version = "0.1.0"
description = "Support de démonstration TFE — Continuous Benchmarking par Instruction Counting (CodSpeed)"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-codspeed>=4.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
